--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "gh-pages": "^2.2.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "semantic-ui-react": "^0.88.2"
   },
