added custom domain

--- a/package.json
+++ b/package.json
@@ -36,5 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://coronasolidarite.github.io/Coronasolidarite-Frontend"
+  "homepage": "https://coronasolidarite.org"
 }
